# MatchImmNet

./: .gitignore  README  README.md  environment.yml  inference.py  main.out  main_weighting.out  mask_matrix.txt  out.txt  pep_weights.txt  prepare_dataset.py  temp_validation_lists.csv  test.out  train_logocv.py  train_logocv_XATT.py  train_logocv_filling.py  train_logocv_score3.py  training_score3_GIN.out
cagin_neg1_atchley_dp03/: config.json  results_CrossAttentionGIN_20251209_raw.csv  results_CrossAttentionGIN_20251209_raw_best.csv  results_CrossAttentionGIN_20251209_summary.csv  results_CrossAttentionGIN_20251209_summary_best.csv  roc_curve.csv
data/01-raw/: AF_vdjdb_score3_20251026.csv  AF_vdjdb_score3_20251209.csv  AF_vdjdb_score3_20251212.csv  prepare_data.py  tcr3d_20251004.csv  test_diff_1217_0105wo10x.csv
data/02-preprocessed/: tcr3d_20251004_renamed.csv  temp_validation_lists.csv
data/02-processed/: tcrpMHC_combined_train_data.csv
notebooks/: GIN_cn1_ce1_neg3_atchley_dp03_summary_with_levenshtein_distance.csv  pred_analysis.ipynb  raw_eda.ipynb  test_modules.ipynb  train_implementations.ipynb  train_implementations.ipynb.orig
notebooks/gradual_filling/: added_peptides_cumulative.csv  added_peptides_cumulative_performance.csv  descriptive.ipynb  performance.ipynb
package/: environment.yml  pyproject.toml
package/diagram/: functions.wsd  package.wsd
package/src/pyGeoMatchImm/embeddings/: esm.py
package/src/pyGeoMatchImm/models/: models.py
package/src/pyGeoMatchImm/utils/: negatives.py
pyGeoMatchImm/: pip.conf
pyGeoMatchImm/models/: Jha.py  (+3 more)
(+19 files in other folders)
