[project]
name = "pyGeoMatchImm"
version = "0.1"
description = "Code to run GNN tests around TCRpMHC classification"
authors = [
    {name = "Samuel Chagas de Assis", email = "samuel.assis@lnbio.cnpem.br"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic==2.11.7",
    "graphein==1.7.8",
    "torch_geometric",
    "torch",
    "torchvision",
    "MDAnalysis"

]

[project.optional-dependencies]
dev = ["pytest", "black"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
